--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -94,3 +94,5 @@ for GNU/Linux 2.6.32 in file info
 compile openssl error: '-mfloat-abi=hard': selected processor lacks an FPU
 3.openssl by rpitools arm-linux-gnueabihf-gcc,ankisyncd by arm-linux-musleabihf-gcc:
 sucessfully compiled and run well on termux(64bits)
+
+user manager addhere to env_variables auth_db path?
