--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -116,3 +116,12 @@ commit_rust_trx() in anki/rslib/sync/server/finish(),so changes cannot be commit
 cannot switch users/profile when server is running?
 1.before meta,drop col from backend and add new col into backend when username in backend isnt equal to
 that in session (in fn add_col)
+
+docker build on raspberry ubuntu 64bit aarch64: always cannot access to github (crates.io),
+search for methods:
+1.replace offitial source with tuna source,after severy retries,things seem to work.except for 
+4 updates still need to access github.
+
+Contribution update :
+- Doc and qa:document re-writing #17 by @redmie
+- Docker build fails at prost-build for armv7h #22 ,#23. by @mktree and @dobefore
