--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -128,3 +128,4 @@ Contribution update :
 - Unwrap reduction 2bis and versions bump:move anki out of source tree,fix run time in run time due to anki update by @redmie
 - Version-bump-update-anki-lib/better clone-patch-anki #29,fork from #18. document about #18, by @redmie,@dobefore
 - Cicd-system #26 by @dobefore and @redmie's suggestions
+- bump ankisyncd to 0.1.5 #30 by @dobefore
