--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -140,3 +140,6 @@ add actix-web middlewares
 1.How to append username to log info?
 2. error handling about response code
 
+return fordden code when session error occurs when users try to log in though they have already
+logged in with an existing account,which will return 500. 
+
