--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -201,6 +201,11 @@ we can increase this limit by setting env var MAX_SYNC_PAYLOAD_MEGS on the serve
 
 9. max upload collection size limit on Ankidroid:setting on the server doesn't work
 
+10. more user-friendly feedback when authentication fails or two hostkey are not equal
+
+11. add cross-compie target aarch64 and remove target arm in github action build scripys CI/CD
+
+
 Three.uodate readme 
 Four. update version to 1.0.0 OK
 
